--- a/package.json
+++ b/package.json
@@ -19,11 +19,23 @@
   "devDependencies": {
     "@types/webfontloader": "^1.0.0",
     "@vitejs/plugin-vue": "^3.0.0",
+    "sass": "^1.53.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.0",
     "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-tsc": "^0.38.4"
   },
-  "type": "module"
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/tce-template.umd.cjs",
+  "module": "./dist/tce-template.js",
+  "exports": {
+    ".": {
+      "import": "./dist/tce-template.js",
+      "require": "./dist/tce-template.umd.cjs"
+    }
+  }
 }
