--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .js,.ts,.vue ."
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
@@ -19,8 +20,21 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/eslint-plugin": "^7.17.7",
+    "@extensionengine/eslint-config": "^3.0.1",
     "@types/webfontloader": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-vue": "^3.0.0",
+    "eslint": "^8.20.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-require-sort": "^1.2.2",
+    "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vuetify": "^1.1.0",
     "sass": "^1.53.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
