--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@npmcli/package-json": "^2.0.0",
+    "chalk": "^4.1.2",
+    "enquirer": "^2.3.6",
     "roboto-fontface": "*",
+    "shelljs": "^0.8.5",
+    "validate-npm-package-name": "^4.0.0",
     "vue": "^3.2.37",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
