--- a/package.json
+++ b/package.json
@@ -35,26 +35,30 @@
     "shelljs": "^0.8.5",
     "validate-npm-package-name": "^4.0.0",
     "vue": "^3.2.37",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.0.0-beta.9",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/eslint-plugin": "^7.18.10",
-    "@extensionengine/eslint-config": "^3.0.1",
     "@extensionengine/stylelint-config": "^1.1.1",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-vue": "^3.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-require-sort": "^1.2.2",
     "eslint-plugin-vue": "^9.3.0",
+    "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "eslint-plugin-vuetify": "^1.1.0",
+    "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "stylelint": "^14.11.0",
     "typescript": "^4.6.4",
