--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "lint:js": "eslint --ext .js,.ts,.vue .",
-    "lint:css": "stylelint \"src/**/*.vue\" \"src/**/*.scss\" \"src/**/*.css\"",
-    "lint": "npm run lint:js && npm run lint:css"
+    "lint": "eslint --ext .js,.ts,.vue ."
   },
   "bin": {
     "@tailor-cms/tce-vue": "bin/index.cjs"
@@ -39,7 +37,6 @@
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
-    "@extensionengine/stylelint-config": "^1.1.1",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
@@ -59,7 +56,6 @@
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
-    "stylelint": "^14.11.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.0",
