--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tailor-cms/tce-vue",
-  "description": "Custom content element starter template",
+  "description": "Content element starter template for Vue",
   "author": "ExtensionEngine <info@extensionengine.com>",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "files": [
     "dist"
@@ -48,7 +48,6 @@
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-require-sort": "^1.2.2",
@@ -59,7 +58,6 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-vuetify": "^1.0.0-alpha.0",
-    "vue-cli-plugin-vuetify": "~2.5.1",
     "vue-tsc": "^0.38.4"
   }
 }
