--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "jsx": "preserve",
     "sourceMap": true
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["runtime/**/*.ts", "runtime/**/*.d.ts", "runtime/**/*.tsx", "runtime/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
